scenario_run_20260303_163750.log
  File "C:\nexus-a2a-protocol\tools\run_all_scenarios.py", line 74
    cwd=r"C:
        ^
SyntaxError: unterminated string literal (detected at line 74)
